--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,21 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+if(MSVC)
+    # Генерируем статическую заглушку для динамических библиотек
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS true)
+
+    # Включаем высокий уровень предупреждений
+    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+        string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+    endif()
 endif()
 
 project ("Search Tree Algorithms")
 
 # Включите подпроекты.
-add_subdirectory ("Search Tree Algorithms")
+add_executable (lab4_actions_with_set "lab4/tests.cpp" "lab4/tree.h")
+
+add_executable (lab4 "lab4/tree.cpp" "lab4/tree.h")
